tdf#91577 - fix unique_ptr conversion bugs in reportdesign.

Change-Id: Icc94ce266d567e7aad5afb5eacf0e85699ef4107