reportdesign/source/ui/report/DesignView.cxx
@@ -139,26 +139,26 @@ void ODesignView::dispose()
     if ( m_pPropWin )
     {
         notifySystemWindow(this,m_pPropWin,::comphelper::mem_fun(&TaskPaneList::RemoveWindow));
+        m_pPropWin.disposeAndClear();
     }
     if ( m_pAddField )
     {
         SvtViewOptions aDlgOpt( E_WINDOW, OUString( UID_RPT_RPT_APP_VIEW ) );
         aDlgOpt.SetWindowState(OStringToOUString(m_pAddField->GetWindowState(WINDOWSTATE_MASK_ALL), RTL_TEXTENCODING_ASCII_US));
         notifySystemWindow(this,m_pAddField,::comphelper::mem_fun(&TaskPaneList::RemoveWindow));
+        m_pAddField.disposeAndClear();
     }
     if ( m_pReportExplorer )
     {
         SvtViewOptions aDlgOpt(E_WINDOW, OStringToOUString(m_pReportExplorer->GetHelpId(), RTL_TEXTENCODING_UTF8));
         aDlgOpt.SetWindowState(OStringToOUString(m_pReportExplorer->GetWindowState(WINDOWSTATE_MASK_ALL), RTL_TEXTENCODING_ASCII_US));
         notifySystemWindow(this,m_pReportExplorer,::comphelper::mem_fun(&TaskPaneList::RemoveWindow));
+        m_pReportExplorer.disposeAndClear();
     }
 
-    m_aSplitWin.disposeAndClear();
+    m_pTaskPane.disposeAndClear();
     m_aScrollWindow.disposeAndClear();
-    m_pTaskPane.clear();
-    m_pReportExplorer.clear();
-    m_pPropWin.clear();
-    m_pAddField.clear();
+    m_aSplitWin.disposeAndClear();
     dbaui::ODataView::dispose();
 }
 
